# mpkix-judgement

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  benchmark.cpp
key-and-file/: info  key  key.pub
ope-from-cryptodb/: example
test/: CMakeLists.txt
